# bestbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md
docker/: entrypoint.sh  start.sh
sample/: config.toml
src/: bestbuy.rs  common.rs  config.rs  discord.rs  gmail.rs  main.rs  twilio.rs  walmart.rs
