[package]
name = "bestbot"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
fantoccini = "0.17.3"
tokio = { version = "1", features = ["default", "macros", "rt-multi-thread"] }
structopt = "0.3"
anyhow = "1"
rusty-money = "0.4"
google-gmail1 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
base64 = "0.13.0"
regex = "1"
toml = "0.5"
