[package]
name = "bestbot"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
# Private fork with cookie support
fantoccini = { git = "https://github.com/aksiksi/fantoccini", rev = "9454875108a29975811d05f3033b21d4af29592f" }
tokio = { version = "1", features = ["default", "macros", "rt-multi-thread"] }
structopt = "0.3"
anyhow = "1"
rusty-money = "0.4"
google-gmail1 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
base64 = "0.13.0"
regex = "1"
toml = "0.5"
log = "0.4.14"
env_logger = "0.8.3"
reqwest = { version = "0.11", features = ["cookies", "json", "rustls-tls-native-roots"] }
